--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,5 +1,31 @@
 * {
   margin: 0;
   padding: 0;
-  background-color: antiquewhite;
+}
+
+body {
+  background-color: rgb(27, 41, 46);
+}
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.page {
+  height: 100vh;
+  display: flex;
+  color: #fff;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  z-index: 10;
+}
+
+.page h1 {
+  font-size: 40px;
+  margin: 60px;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
