--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6,7 +6,7 @@
 body {
   background-color: rgb(27, 41, 46);
 }
-canvas {
+/* canvas {
   position: fixed;
   top: 0;
   left: 0;
@@ -28,4 +28,4 @@ canvas {
 
 ::-webkit-scrollbar {
   display: none;
-}
+} */
